--- a/index.html
+++ b/index.html
@@ -252,6 +252,23 @@
     </div>
     <!-- /.app-container -->
 
+    <!-- popup box -->
+    <div class="popup__wrap">
+        <div class="close__btn">x</div>
+        <div class="popup__content">
+            <div class="title">Оформить заказ</div>
+            <form class="popup__form" action="#">
+                <label for="your-name">Имя</label>
+                <input type="text" class="inp__name" name="your-name" required placeholder="Введите своё имя">
+                <label for="your-email">Email</label>
+                <input type="email" name="your-email" required placeholder="Введите свой Email">
+
+                <button type="submit" class="btn">Отправить заказ</button>
+            </form>
+        </div>
+    </div>
+    <!--end popup box -->
+
     <script src="./js/main.js"></script>
 
 </body>
